galeria terminada y alineada

--- a/galeriaBeneficios.html
+++ b/galeriaBeneficios.html
@@ -8,27 +8,26 @@
     <title>Beneficios</title>
   </head>
   <body>
-    <div class="contenedorBeneficios">
-      <div>
-        <figure>
-          <img src="./assets/galeriaBeneficios/torta.png" alt="" />
-          <figcaption>Masividad y posibilidad de segmentación</figcaption>
-        </figure>
-        <figure>
-          <img src="./assets/galeriaBeneficios/dinero.png" alt="" />
-          <figcaption>Público económicamente activo</figcaption>
-        </figure>
-        <figure>
-          <img src="./assets/galeriaBeneficios/tren.png" alt="" />
+    <!--<div>
+      <figure>
+        <img src="./assets/galeriaBeneficios/torta.png" alt="" />
+        <figcaption>Masividad y posibilidad de segmentación</figcaption>
+      </figure>
+      <figure>
+        <img src="./assets/galeriaBeneficios/dinero.png" alt="" />
+        <figcaption>Público económicamente activo</figcaption>
+      </figure>
+      <figure>
+        <img src="./assets/galeriaBeneficios/tren.png" alt="" />
           <figcaption>
             Frecuencia de viajes por trabajo, estudio, compras, esparcimiento
           </figcaption>
         </figure>
         <figure class="distinto">
           <img
-            class="distinto"
-            src="./assets/galeriaBeneficios/ojito.png"
-            alt=""
+          class="distinto"
+          src="./assets/galeriaBeneficios/ojito.png"
+          alt=""
           />
           <figcaption>
             Contexto sin contaminación visual ni vandalismo
@@ -44,6 +43,43 @@
           <img src="./assets/galeriaBeneficios/foquito.png" alt="" />
           <figcaption>Amplia posibilidad de creatividad aplicada</figcaption>
         </figure>
+      </div>-->
+      <div class="contenedorBeneficios">
+      <div>
+        <figure>
+          <img src="./assets/galeriaBeneficios/torta.png" alt="" />
+        </figure>
+        <figure>
+          <img src="./assets/galeriaBeneficios/dinero.png" alt="" />
+        </figure>
+        <div class="descripciones">
+          <p>Masividad y posibilidad de segmentación</p>
+          <p>Público económicamente activo</p>
+        </div>
+      </div>
+      <div>
+        <figure>
+          <img src="./assets/galeriaBeneficios/tren.png" alt="" />
+        </figure>
+        <figure>
+          <img src="./assets/galeriaBeneficios/ojito.png" alt="" />
+        </figure>
+        <div class="descripciones">
+          <p>Frecuencia de viajes por trabajo, estudio, compras, esparcimiento</p>
+          <p>Contexto sin contaminación ni vandalismo</p>
+        </div>
+      </div>
+      <div>
+        <figure>
+          <img src="./assets/galeriaBeneficios/hombrecito.png" alt="" />
+        </figure>
+        <figure>
+          <img src="./assets/galeriaBeneficios/foquito.png" alt="" />
+        </figure>
+        <div class="descripciones">
+          <p>Marcados tiempos de espera (5' andenes + 15' vagones)</p>
+          <p>Amplia posibilidad de creatividad aplicada</p>
+        </div>
       </div>
     </div>
   </body>
