--- a/Brindamos servicios integrales punta a punta.html
+++ b/Brindamos servicios integrales punta a punta.html
@@ -1,53 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="puntapunta.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="puntapunta.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div class="contenedor">
+      <div class="col1">
+        <figure>
+            <img src="./assets/puntapunta/punta1.png" alt="" />
+          </figure>
+        <figcaption>Idea</figcaption>
+        <figure>
+            <img src="./assets/puntapunta/punta2.png" alt="" />
+          </figure>
+        <figcaption>Planificacion</figcaption>
+        <figure>
+            <img src="./assets/puntapunta/punta3.png" alt="" />
+          </figure>
+        <figcaption>Implementación</figcaption>
+      </div>
+      <div class="col2">
+        <figure>
+          <img class="one" src="./assets/puntapunta/lineaNaranja.png" alt="" />
+        </figure>
+        <figure>
+          <img class="two" src="./assets/puntapunta/lineaNaranja.png" alt="" />
+        </figure>
+        <figure>
+          <img class="three" src="./assets/puntapunta/lineaNaranja.png" alt="" />
+        </figure>
+      </div>
+      <div class="col3">
+        <figure>
+            <img src="./assets/puntapunta/punta4.png" alt="" />
+          </figure>
+        <figcaption>Asesoramiento</figcaption>
+        <figure>
+            <img src="./assets/puntapunta/punta5.png" alt="" />
+          </figure>
+        <figcaption>Producción</figcaption>
+        <figure>
+            <img src="./assets/puntapunta/punta6.png" alt="" />
+          </figure>
+        <figcaption>Mantenimiento</figcaption>
+      </div>
+    </div>
+<!--
     <div class="contenedorPuntaPunta">
-        <div>
-          <figure>
-            <img src="./assets/galeriaBeneficios/torta.png" alt="" />
-          </figure>
-          <figure class="linea"><img src="./assets/puntapunta/lineaNaranja.png" alt=""></figure>
-          <figure>
-            <img src="./assets/galeriaBeneficios/dinero.png" alt="" />
-          </figure>
-          <div class="descripciones">
-            <p>Idea</p>
-            <p>Asesoramiento</p>
-          </div>
-        </div>
-        <div>
-          <figure>
-            <img src="./assets/galeriaBeneficios/tren.png" alt="" />
-          </figure>
-          <div class="linea"></div>
-          <figure>
-            <img src="./assets/galeriaBeneficios/ojito.png" alt="" />
-          </figure>
-          <div class="descripciones">
-            <p>Planificacion</p>
-            <p>Producción</p>
-          </div>
-        </div>
-        <div>
-          <figure>
-            <img src="./assets/galeriaBeneficios/hombrecito.png" alt="" />
-          </figure>
-          <div class="linea"></div>
-          <figure>
-            <img src="./assets/galeriaBeneficios/foquito.png" alt="" />
-          </figure>
-          <div class="descripciones">
-            <p>Implementación</p>
-            <p>Mantenimiento</p>
-          </div>
+      <div>
+        <figure>
+          <img src="./assets/galeriaBeneficios/torta.png" alt="" />
+        </figure>
+        <figure class="linea">
+          <img src="./assets/puntapunta/lineaNaranja.png" alt="" />
+        </figure>
+        <figure>
+          <img src="./assets/galeriaBeneficios/dinero.png" alt="" />
+        </figure>
+        <div class="descripciones">
+          <p>Idea</p>
+          <p>Asesoramiento</p>
         </div>
       </div>
-</body>
+      <div>
+        <figure>
+          <img src="./assets/galeriaBeneficios/tren.png" alt="" />
+        </figure>
+        <figure class="linea">
+          <img src="./assets/puntapunta/lineaNaranja.png" alt="" />
+        </figure>
+        <figure>
+          <img src="./assets/galeriaBeneficios/ojito.png" alt="" />
+        </figure>
+        <div class="descripciones">
+          <p>Planificacion</p>
+          <p>Producción</p>
+        </div>
+      </div>
+      <div>
+        <figure>
+          <img src="./assets/galeriaBeneficios/hombrecito.png" alt="" />
+        </figure>
+        <figure class="linea">
+          <img src="./assets/puntapunta/lineaNaranja.png" alt="" />
+        </figure>
+        <figure>
+          <img src="./assets/galeriaBeneficios/foquito.png" alt="" />
+        </figure>
+        <div class="descripciones">
+          <p>Implementación</p>
+          <p>Mantenimiento</p>
+        </div>
+      </div>
+    </div>-->
+  </body>
 </html>
