--- a/Brindamos servicios integrales punta a punta.html
+++ b/Brindamos servicios integrales punta a punta.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="contenedor">
+    <div class="contenedorPunta">
       <div class="col1">
         <figure>
             <img src="./assets/puntapunta/punta1.png" alt="" />
